--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	<script src="./js/libs/pixi.js"></script>
 	<script src="./js/libs/gsap.min.js"></script>
 	<script src="./js/libs/pixi-spine.js"></script>
-
+	
 </head>
 
 <body>
-  <script src="./js/main.js"></script>
+	<script src="./js/main.js"></script>
+	<script src="./js/buttons.js"></script>
 </body>
 
 </html>
