--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="./js/libs/pixi.js"></script>
 	<script src="./js/libs/gsap.min.js"></script>
 	<script src="./js/libs/pixi-spine.js"></script>
+	<link rel="stylesheet" href="style.css">
 	
 </head>
 
